# azul-nsrl-lookup-server

./: Dockerfile  README.md  debian.txt  pipeline-mirror.yaml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  tox.ini
azul_nsrl_lookup_server/: __init__.py  cli.py  crud.py  database.py  models.py  schema.py  server.py  settings.py
azul_nsrl_lookup_server/static/css/: extra.css
azul_nsrl_lookup_server/templates/: base.html  index.html
docker-scripts/: download_database.bash  update_database.bash
kube/: offline-nist-nginx.yaml
tests/: test_server.py
