[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "azul-nsrl-lookup-server"
description = "Self hosted service to lookup hashes from NSRL."
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["license.md"]
authors = [
  { name="Azul"},
]
requires-python = ">=3.12"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "setuptools>=80.10.2",
    "sqlalchemy<2.0",
    "typer[all]>=0.21.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
azul-nsrl-lookup-server = "azul_nsrl_lookup_server.cli:cli"

[project.urls]
Documentation = "https://australiancybersecuritycentre.github.io/azul/"
Repository = "https://github.com/AustralianCyberSecurityCentre/azul-nsrl-lookup-server"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"

[tool.hatch.version.fallback]
version = "0.0.0"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "tox>=4.34.1",
]

[tool.ruff]
# formatter config
line-length = 119
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".env",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Flake8 linting equivalent but for ruff
[tool.ruff.lint]
select = [
  # isort
  "I",
  # Code styles
  "E4",
  "E7",
  "E9",
  # pyflakes
  "F",
  # flake8 bug bear
  "B",
  # flake8 doc strings
  "D",
]
ignore = ["B008","C901","D104","D107","E203"]
exclude = [
    "tests/*",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.pydocstyle]
# Use the Google docstring convention
convention = "google"

# Make formatter match black
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
